--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilerplate-javascript",
   "version": "1.0.0",
-  "description": "A boilerplate javascript project",
+  "description": "A boilerplate javascript project to showcase static site generation using contentful APIs to get the content",
   "main": "main.js",
   "scripts": {
     "start": "gulp nunjucks",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/contentful/boilerplate-javascript.git"
+    "url": "git+https://github.com/MalhotraK24/contentful-demo.git"
   },
   "engines": {
     "node": ">=4.7.2"
@@ -22,9 +22,9 @@
   "author": "Khaled Garbaya <khaled@contentful.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/contentful/boilerplate-javascript/issues"
+    "url": "https://github.com/MalhotraK24/contentful-demo/issues"
   },
-  "homepage": "https://github.com/contentful/boilerplate-javascript#readme",
+  "homepage": "https://github.com/MalhotraK24/contentful-demo#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "contentful": "^7.10.0",
